test/success/integration/_succ_let_block_imper.hs
main = do
       let x :: Int
           x = 1
       print "hello"