test/fail/integration/_fail_grammar_let_block_imper_3.hs
main = do
       let x :: Int
          x = 1
       print x